@@ -1,7 +1,7 @@
 /* multimatch.h: class for performing a match
  *
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004,2005,2006 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -72,6 +72,9 @@ class MultiMatch
 	 *  while query is running.
 	 */
         bool recalculate_w_max;
+
+	/** Is each sub-database remote? */
+	vector<bool> is_remote;
 
 	/// get the collapse key
 	string get_collapse_key(PostList *pl,
